# local-mixture-of-agents

./: .env.example  .gitignore  CHANGELOG.md  README.md  SKILL.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
references/: port-cloud-tool-to-ollama.md
scripts/: __init__.py  local_moa.py
tests/: test_local_moa.py
