[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-mixture-of-agents"
version = "3.2.0"
description = "Local Mixture-of-Agents (MoA) pipeline via Ollama — parallel reference models → aggregator synthesis"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = ["aiohttp>=3.8.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1", "pytest-cov>=4.0"]

[project.scripts]
local-moa = "local_moa:main"

[tool.setuptools]
package-dir = { "" = "scripts" }
py-modules = ["local_moa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# E501 (line length) is governed by line-length above; keep the default rule set otherwise.
ignore = ["E741"]
